--- a/scaling-barnacle/src/app/app.component.html
+++ b/scaling-barnacle/src/app/app.component.html
@@ -1,2 +1,11 @@
-<h1>{{title}}</h1>
-<app-pokemon></app-pokemon>
+<section class="section">
+    <div class="container">
+        <app-navbar></app-navbar>
+        <section class="section">
+            <div class="container">
+                <h1 class="title">{{title}}</h1>
+                <app-pokemon></app-pokemon>
+            </div>
+        </section>
+    </div>
+</section>
