move pokemon component to its own route

--- a/scaling-barnacle/src/app/app.component.html
+++ b/scaling-barnacle/src/app/app.component.html
@@ -4,8 +4,9 @@
         <section class="section">
             <div class="container">
                 <h1 class="title">{{title}}</h1>
-                <app-pokemon></app-pokemon>
+                <p> The pokemon component has been moved to the /pokemon route now</p>
             </div>
         </section>
     </div>
+    <router-outlet></router-outlet>
 </section>
