--- a/scaling-barnacle/src/app/navbar/navbar.component.html
+++ b/scaling-barnacle/src/app/navbar/navbar.component.html
@@ -20,18 +20,7 @@
         <div class="navbar-end">
             <div class="navbar-item">
                 <div class="field is-grouped">
-                    <p class="control">
-                        <a class="bd-tw-button button" data-social-network="Twitter" data-social-action="tweet"
-                            data-social-target="https://bulma.io" target="_blank"
-                            href="https://twitter.com/intent/tweet?text=Bulma: a modern CSS framework based on Flexbox&amp;hashtags=bulmaio&amp;url=https://bulma.io&amp;via=jgthms">
-                            <span class="icon">
-                                <i class="fab fa-twitter"></i>
-                            </span>
-                            <span>
-                                Tweet
-                            </span>
-                        </a>
-                    </p>
+                    <p class="control"> Potato </p>
                 </div>
             </div>
         </div>
